# SiEPIClab

./: .gitignore  CorvusEco.py  LICENSE  LICENSE.txt  MANIFEST.in  MGMotorPanel.py  README.md  README.txt  autoMeasureProgressDialog.py  dummyLaserParameters.py  fineAlignDialog.py  fineAlignPanel.py  hp816x_N77Det_instr.py  hp816x_instr.py  laserPanel.py  logWriter.py  myMatplotlibPanel.py  pyOptomipUpdateSteps  requirements.txt  setup.cfg
Build_OSX_M1/: build1
SiEPICLabTestParam/: ElectroOpticDevice.py  TestParameters.py  __init__.py  __main__.py  autoMeasure.py  autoMeasurePanel.py  autoMeasureProgressDialog.py  cli.py  filterFrame.py  measurementRoutines.py
build_Windows/: build1
pyOptomip/: .autoMeasurePanel.py.swp  .autoMeasurePanel_BASE_449.py.swp  .autoMeasurePanel_LOCAL_449.py.swp  .autoMeasurePanel_REMOTE_449.py.swp  .gitignore  03_Oct_2022_15_48_54_20210514_seymour_split2_static (2).txt.csv  03_Oct_2022_16_32_16_20210514_seymour_split2_static (2).txt.csv  05_Dec_2022_16_02_16_.csv  07_Dec_2022_14_30_24.csv  11_Oct_2022_11_36_46_20210514_seymour_split2_static (2).txt.csv  11_Oct_2022_11_39_34_20210514_seymour_split2_static (2).txt.csv  11_Oct_2022_14_04_12_20210514_seymour_split2_static (2).txt.csv  11_Oct_2022_14_24_16_20210514_seymour_split2_static (2).txt.csv  11_Oct_2022_15_23_56_20210514_seymour_split2_static (2).txt.csv  AutoMeasureTestSuite.py  BSC203.py  BSC203MotorPanel.py  BSC203MotorParameters.py  CameraPanel.py  Camera_class.py  Changelog.txt  CorvusEco.py  CorvusEcoFrame.py  CorvusEcoParameters.py  ElectricProbeControl.py  ElectroOpticDevice.py  (+78 more)
