[metadata]
name = SiEPICLabTestParam3
version = 0.0.14
author = Jon Barnes and Madeline Mahanloo
author_email = jonathanyorkbarnes@gmail.com
description = Create Testing routine files for use with the SiEPICLAB testing package
long_description= file: README.md
long_description_content_type = text/markdown
url = https://github.com/SiEPIC/pyOptomip
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
        wxPython
        PyYAML
        matplotlib
        numpy
        scipy
        attrdict